--- a/src/main/webapp/WEB-INF/templates/messageforms/list.html
+++ b/src/main/webapp/WEB-INF/templates/messageforms/list.html
@@ -6,9 +6,9 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<title></title>
-<meta name="description" content="HTML 5 CSS 3 Spring Form" />
-<meta name="author" content="alex soto" />
+<title>HTML5 Spring Roo Thymeleaf Demo</title>
+<meta name="description" content="HTML5 Spring Roo Thymeleaf Demo Contact Form" />
+<meta name="author" content="see humans.txt"/>
 
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
@@ -46,12 +46,12 @@
                     <td th:text="${row.phone}">999 555 1212</td>
                     <td th:text="${row.website}">http://mysite.com</td>
                     <td th:text="${row.message}">My Message...</td>
-                    <td>
+                    <td> <!-- Edit item button -->
                         <a class="btnIcon" href="update.html" th:href="@{'/messageforms/' + ${row.id} + '?form'}">
                             <img id="editBtn" name="editBtn" src="../../../img/update.png" title="edit" alt="edit" class="btnIcon" 
                                 th:src="@{/img/update.png}" th:title="#{message_list.button.edit}" th:alt="#{message_list.button.edit}"/></a>
                     </td>
-                    <td>
+                    <td> <!-- Delete item button -->
                         <form action="list.html" th:action="@{'/messageforms/' + ${row.id}}" method="post">
                             <input type="hidden" name="_method" value="DELETE" />
                             <input type="hidden" name="page" value="1" />
@@ -63,6 +63,7 @@
                 </tr>
             </tbody>
         </table>
+        <!-- Page buttons -->
         <a class="button btnSmall" href="../index.html" th:href="@{/}" th:text="#{message_list.button.home}">Home</a>
         <a class="button btnSmall" href="create.html" th:href="@{'/messageforms?form'}" th:text="#{message_list.button.new}">New</a>
         <a class="button btnSmall" href="list.html" th:href="@{'/messageforms?page=1&amp;size=10'}" th:text="#{message_list.button.list}">List</a>
@@ -72,7 +73,7 @@
             <h2>Footer</h2>
 		</footer>
 	</div>
-	<!--! end of #container -->
+	<!-- end of #container -->
     
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script>
