--- a/src/main/webapp/WEB-INF/templates/messageforms/update.html
+++ b/src/main/webapp/WEB-INF/templates/messageforms/update.html
@@ -6,9 +6,9 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<title></title>
-<meta name="description" content="HTML 5 CSS 3 Spring Form" />
-<meta name="author" content="alex soto"/>
+<title>HTML5 Spring Roo Thymeleaf Demo</title>
+<meta name="description" content="HTML5 Spring Roo Thymeleaf Demo Contact Form" />
+<meta name="author" content="see humans.txt"/>
 
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
@@ -88,7 +88,7 @@
             <h2>Footer</h2>
         </footer>
     </div>
-    <!--! end of #container -->
+    <!-- end of #container -->
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>
